<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_memberData"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/page_memberData" />
        <item
            android:id="@+id/nav_memorialDay"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/page_memorialDay" />
        <item
            android:id="@+id/nav_myViewpoint"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/page_myViewpoint" />
        <item
            android:id="@+id/nav_myTravle"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/page_myTravle" />
        <item
            android:id="@+id/nav_travleEdit"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/page_travleEdit" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/page_logout" />

        <item android:title="我的收藏">
            <menu>
                <item
                    android:id="@+id/my_attraction"
                    android:icon="@drawable/ic_menu_share"
                    android:title="收藏的景點" />
                <item
                    android:id="@+id/my_restaurant"
                    android:icon="@drawable/ic_menu_send"
                    android:title="收藏的餐廳" />
            </menu>
        </item>
    </group>

</menu>
